# RBase

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Jenkinsfile  README.md
RComm/: CMakeLists.txt  README.md
RComm/include/RComm/: LiteComm.hpp  LiteCommAdapter.hpp  LiteCommDict_RBreakout.hpp  LiteCommDropper.hpp  LiteCommMessage.hpp  LiteCommReliability.hpp
RComm/src/: RComm.cpp
RRegistry/: CMakeLists.txt
RRegistry/include/RRegistry/: DBPersistencyPolicy.hpp  DebuggingDataStore.hpp  Detail.hpp  Entries.hpp  PersistencyPolicy.hpp  Registry.hpp  SubscriptionMap.hpp  TypeConverter.hpp
RRegistry/src/: DBPersistencyPolicy.cpp
RRegistry/swig/: rregistry.i
RRegistry/test/: CMakeLists.txt  adapter.cpp  lossy.cpp
RSupport/: CMakeLists.txt
RSupport/example/: regulation-kernel.py
RSupport/include/RComm/: RComm.h
RSupport/include/RSupport/: ConsoleAdapter.hpp  PipeAdapter.hpp  RSupport.h  RSupport.hpp  SocketClientAdapter.hpp
RSupport/src/: CMakeLists.txt  ConsoleAdapter.cpp  PipeAdapter.cpp  RComm.cpp  RSupport.cpp  SocketClientAdapter.cpp
RSupport/test/: CMakeLists.txt  consoleadapter.cpp  pipeadapter.cpp
RUtil/: CMakeLists.txt
RUtil/include/RUtil/: Logging.hpp
RUtil/src/: CMakeLists.txt  Logging.cpp
cmake/: basename_setter.cmake
definitions/: packet.capnp  position.capnp  request.capnp  update.capnp  value.capnp
include/RComm/: LiteComm.hpp  LiteCommAdapter.hpp  ValueAdapter.hpp
include/RRegistry/: Categories.hpp  Datatype.hpp  DebuggingDataStore.hpp  Detail.hpp  Entries.hpp  Movement.hpp  Operation.hpp  Property.hpp  RRegistry.hpp  Registry.hpp  RegistryReceiver.hpp  SubscriptionMap.hpp  System.hpp  TypeConverter.hpp
swig/: CMakeLists.txt  rregistry.i  rsupport.i  shared.i
swig/python/: CMakeLists.txt  pyshared.i  rregistry.i  rsupport.i
test/: CMakeLists.txt  adapter.cpp
